# cls-ledger

./: .gitignore  README.md  pyproject.toml
agentlife/: banks.py  generate.py  generator.py  schema.py  templates.py  world.py
clsledger/: analyze_h1.py  ledger.py  replay.py  slots.py  system.py  unlearn_eval.py  unlearn_slots.py
obsidian_ledger/: README.md  _backends.py  _ledger_core.py  cli.py  instructions.py  mcp_server.py  store.py
obsidian_ledger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paper/: REPRODUCING.md  draft.md  zenodo_metadata.json
reports/: L-1-rag-Qwen2.5-3B-Instruct-4bit-k8.json  L-1-slots-Qwen2.5-3B-Instruct-4bit-stable-hybrid-routed.json  M-1-cls-Qwen2.5-3B-Instruct-4bit-all-hybrid.json  M-1-cls-Qwen2.5-3B-Instruct-4bit-hot-hybrid.json  M-1-cls-Qwen2.5-3B-Instruct-4bit-stable-hybrid-s30.json  M-1-cls-Qwen2.5-3B-Instruct-4bit-stable-hybrid.json  M-1-full-gpt-4.1-mini.json  M-1-rag-Qwen2.5-3B-Instruct-4bit-k8.json  M-1-rag-gpt-4.1-mini-k8.json  M-1-slots-Qwen2.5-3B-Instruct-4bit-all-hybrid-b40-routed.json  M-1-slots-Qwen2.5-3B-Instruct-4bit-hot-hybrid-b40-routed.json  M-1-slots-Qwen2.5-3B-Instruct-4bit-stable-hybrid-b40-routed.json  M-1-slots-Qwen2.5-3B-Instruct-4bit-stable-hybrid-routed.json  M-10v5-embrag.json  M-10v5-oracle.json  M-10v5-rag-Qwen2.5-3B-Instruct-4bit-k8.json  M-10v5-slots-Qwen2.5-3B-Instruct-4bit-stable-hybrid-routed.json  M-11v5-embrag.json  M-11v5-oracle.json  M-11v5-rag-Qwen2.5-3B-Instruct-4bit-k8.json  M-11v5-slots-Qwen2.5-3B-Instruct-4bit-stable-hybrid-routed.json  M-12v5-embrag.json  (+52 more)
(+27 files in other folders)
