[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-ledger"
version = "0.1.0"
description = "A symbolic fact ledger for Obsidian vaults that any coding agent can trust: supersession, provenance, induction, and an anti-hallucination verify — via files, CLI, or MCP."
readme = "obsidian_ledger/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Caio Vicentino" }]
keywords = ["obsidian", "agent-memory", "mcp", "llm", "knowledge-base",
            "anti-hallucination", "provenance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/caiovicentino/cls-ledger"
Paper = "https://doi.org/10.5281/zenodo.21375428"

[project.optional-dependencies]
mlx = ["mlx-lm"]

[project.scripts]
obsidian-ledger = "obsidian_ledger.cli:main"
obsidian-ledger-mcp = "obsidian_ledger.mcp_server:main"

[tool.setuptools]
packages = ["obsidian_ledger"]
